--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,13 @@ authors = [
     { name = "Jason Swift", email = "anemele@outlook.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "pywin32>=311",
+]
 
 [project.scripts]
 an2cn = "py_cvt.an2cn:main"
+doc2pdf = "py_cvt.doc2pdf:main"
 
 [build-system]
 requires = ["uv_build>=0.9.9,<0.10.0"]
