--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
 requires-python = ">=3.12"
 dependencies = [
+    "psutil>=7.1.3",
     "pywin32>=311 ; sys_platform == 'win32'",
 ]
 
