--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
 # converters
 an2cn = "py_tools.an2cn:main"
 ssn = "py_tools.ssn:main"
+fib = "py_tools.fib:main"
+
 doc2pdf = "py_tools.doc2pdf:main"
 
 # hashsum aliases
