add `pyins` and update `pyver`;

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ lse = "py_tools.lse:main"
 cf = "py_tools.crypt_file:main"
 
 # python related
+pyins = "py_tools.pyins:main"
 pyver = "py_tools.pyver:main"
 
 [build-system]
